# autopoiesis

./: .dockerignore  .env.example  .gitignore  .lefthook-generated.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.platform  Earthfile  LICENSE  PRODUCT.md  QUALIFICATION.md  README.md  Tiltfile  api-server.asd  autopoiesis-shen.asd  autopoiesis.asd  crystallize.asd  demo.md  docker-compose.yml  eval.asd  holodeck.asd  jarvis.asd  paperclip.asd  research.asd  run-tests.lisp  sandbox.asd  session-work.md  shell.nix  substrate.asd  supervisor.asd  swarm.asd  team.asd
.claude/: .skm.toml
.github/workflows/: ci.yml
blog/: demo-output.txt  demo-setup.lisp  load-test.lisp  part-1.md  part-2.md  part-3.md  part-4.md  part-4b.md  part-5.md  part-6.md  run-demo.lisp  start-backend.lisp
dag-explorer/: holodeck.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dag-explorer/src/: App.tsx
docs/: DEPLOYMENT.md  holodeck-bevy-prompt.md  user-stories.md
docs/specs/: 00-overview.md  01-core-architecture.md  02-cognitive-model.md  03-snapshot-system.md  04-human-interface.md  05-visualization.md  06-integration.md  07-implementation-roadmap.md
e2e/: 01-health.sh  02-dashboard.sh  03-agent-lifecycle.sh  04-agent-detail.sh  05-views.sh  06-dag-view.sh  07-timeline.sh  08-tasks.sh  09-conductor.sh  10-teams.sh  11-jarvis.sh  12-command-palette.sh  13-activity-cost.sh  14-ws-smoke.sh  container-smoke.sh  docker-compose.e2e.yml  helpers.sh  run.sh  ws-smoke.sh  ws-smoke.ts
emacs/: README.md  autopoiesis-pkg.el  sly-autopoiesis.el  slynk-autopoiesis.lisp
frontends/command-center/: .gitignore  detached.html  index.html  package.json  vite.holodeck.config.ts
frontends/tui/: go.sum
holodeck/: Cargo.toml
holodeck/assets/fonts/: README.md
holodeck/assets/shaders/: agent_shell.wgsl  energy_beam.wgsl  grid.wgsl  hologram.wgsl
holodeck/src/: config.rs  headless.rs  main.rs
holodeck/src/plugins/: agent_plugin.rs  connection_plugin.rs  mod.rs  scene_plugin.rs  shader_plugin.rs  ui_plugin.rs
holodeck/src/protocol/: client.rs  codec.rs  events.rs  mod.rs  types.rs
holodeck/src/rendering/: environment.rs  materials.rs  mod.rs  postprocessing.rs
holodeck/src/shaders/: agent_shell_material.rs  energy_beam_material.rs  grid_material.rs  hologram_material.rs  mod.rs
holodeck/src/state/: components.rs  events.rs  resources.rs
holodeck/src/systems/: agents.rs  animation.rs  blocking.rs  camera.rs  capabilities.rs  connection.rs  disconnect_visual.rs  layout.rs  mod.rs  particles.rs  selection.rs  snapshots.rs  spine.rs  step_complete.rs  task_ring.rs  thoughts.rs  tweens.rs
holodeck/src/ui/: agent_panel.rs  command_bar.rs  hud.rs  mod.rs  notifications.rs  theme.rs  thought_inspector.rs
lfe/: rebar.config
lfe/config/: cortex-mcp.json  infra-watcher-prompt.md  sys.config  vm.args
nexus/: AGENTS.md  Cargo.toml  nexus.toml.example
nexus/crates/nexus-holodeck/: Cargo.toml
nexus/crates/nexus-holodeck/src/: headless.rs  lib.rs  terminal_encode.rs
nexus/crates/nexus-mcp/: Cargo.toml
nexus/crates/nexus-mcp/src/: discovery.rs  lib.rs  session.rs  transport.rs  types.rs
nexus/crates/nexus-protocol/: Cargo.toml
nexus/crates/nexus-protocol/src/: codec.rs  error.rs  lib.rs  rest.rs  types.rs  ws.rs
nexus/crates/nexus-tui/: Cargo.toml
nexus/crates/nexus-tui/src/: app.rs  input.rs  keybinds.rs  layout.rs  lib.rs  notifications.rs  state.rs  theme.rs
nexus/crates/nexus-tui/src/widgets/: agent_detail.rs  agent_list.rs  blocking_prompt.rs  chat.rs  command_bar.rs  diff_viewer.rs  help_overlay.rs  holodeck_viewport.rs  mcp_panel.rs  mod.rs  snapshot_dag.rs  status_bar.rs  thought_stream.rs
nexus/crates/nexus-voice/: Cargo.toml
nexus/crates/nexus-voice/src/: discovery.rs  engines.rs  lib.rs  manager.rs  types.rs  vad.rs
nexus/src/: config.rs  main.rs
platform/: Dockerfile  Earthfile  autopoiesis.asd  docker-compose.yml  substrate.asd
platform/docs/: QUICKSTART.md  README.md  layers.md
platform/scripts/: test.sh
platform/src/: autopoiesis.lisp
platform/static/: dashboard.html
platform/test/: agentic-tests.lisp  api-tests.lisp  core-tests.lisp  crystallize-tests.lisp  e2e-tests.lisp  eval-tests.lisp  git-tools-tests.lisp  holodeck-tests.lisp  learning-integration-tests.lisp  live-llm-tests.lisp  mailbox-integration-tests.lisp  orchestration-tests.lisp  packages.lisp  prompt-registry-tests.lisp  provider-tests.lisp  run-tests.lisp  sandbox-backend-tests.lisp  sandbox-tests.lisp  security-tests.lisp  skel-tests.lisp  substrate-tests.lisp  supervisor-tests.lisp  swarm-integration-tests.lisp  swarm-tests.lisp  team-tests.lisp  workspace-tests.lisp
ralph/: AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  run-once.sh  supervised.sh
scripts/: agent-worker.lisp  build.sh  test.sh
sdk/go/: go.mod
src/: autopoiesis.lisp
src/agent/: agent.lisp  capability.lisp  cognitive-loop.lisp  context-window.lisp  learning.lisp  packages.lisp  registry.lisp  spawner.lisp
src/api/: auth.lisp  connections.lisp  events.lisp  handlers.lisp  mcp-server.lisp  operations.lisp  packages.lisp  routes.lisp  serialization.lisp  serializers.lisp  server.lisp  wire-format.lisp
src/conversation/: context.lisp  turn.lisp
src/core/: cognitive-primitives.lisp  extension-compiler.lisp  packages.lisp  profiling.lisp  recovery.lisp  (+2 more)
test/: agent-tests.lisp  agentic-tests.lisp  api-tests.lisp  bridge-protocol-tests.lisp  conversation-tests.lisp  core-tests.lisp  e2e-tests.lisp  holodeck-tests.lisp  integration-tests.lisp  interface-tests.lisp  meta-agent-tests.lisp  monitoring-tests.lisp  packages.lisp  provider-tests.lisp  rest-api-tests.lisp  run-tests.lisp  security-tests.lisp  snapshot-tests.lisp  substrate-tests.lisp  viz-tests.lisp
tui/: go.mod
(+1196 files in other folders)
