[package]
name = "autopoiesis-holodeck"
version = "0.1.0"
edition = "2021"
description = "3D Spatial Operating System for the Autopoiesis agent platform"
license = "MIT"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }
bevy_egui = "0.33"
bevy_hanabi = "0.15"
bevy_tweening = "0.12"
bevy_panorbit_camera = "0.25"

# Networking
tungstenite = "0.24"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime for WebSocket on background thread
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Config
toml = "0.8"
dirs = "5"

# Logging
tracing = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
