[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "Terminal cockpit for the Autopoiesis agent platform"

[dependencies]
nexus-protocol = { path = "crates/nexus-protocol" }
nexus-tui = { path = "crates/nexus-tui" }
nexus-voice = { path = "crates/nexus-voice" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "copy-dylibs"] }
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
hound = "3.5"
