[package]
name = "nexus-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP client for Nexus — JSON-RPC 2.0 transport, session management, and tool routing"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
