[package]
name = "nexus-voice"
version = "0.1.0"
edition = "2021"
description = "Voice I/O for Nexus — STT, TTS, and VAD via ONNX Runtime"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ort = { workspace = true }
cpal = { workspace = true }
rodio = { workspace = true }
hound = { workspace = true }
